# dead-beef-cafe

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
apps/: CMakeLists.txt
apps/code/: dbc_client_program.cpp  dbc_server_program.cpp  dbc_test.cpp  dbc_win.cpp  dbc_win.h
proto/: CMakeLists.txt  files.proto  host.proto  icmp_packet.proto  ip_packet.proto  query.proto  reply.proto  tcp_packet.proto  test.proto  udp_packet.proto  world.proto
src/: CMakeLists.txt
src/abstr/: CMakeLists.txt
src/abstr/private/: os_fileio.cpp  os_input.cpp  os_netio.cpp  os_shell.cpp
src/abstr/public/: os_fileio.h  os_input.h  os_netio.h  os_shell.h
src/app/: CMakeLists.txt
src/app/code/: dbc.cpp  dbc.h  dbc_client.cpp  dbc_client_program.cpp  dbc_server.cpp  dbc_server_program.cpp  dbc_test.cpp
src/common/: CMakeLists.txt
src/common/private/: common.cpp
src/common/public/: common.h
src/gui/: CMakeLists.txt  dbc_gui.cpp
src/gui/code/: world_gui.cpp  world_gui.h
src/prog/: CMakeLists.txt
src/prog/code/: cmd_basic.cpp  cmd_basic.h  os_basic.cpp  os_basic.h  os_basic_driver.cpp  os_basic_edit.cpp  os_basic_file.cpp  os_basic_fun.cpp  os_basic_host.cpp  os_basic_ls.cpp  os_basic_rm.cpp  os_basic_shell.cpp  os_basic_user.cpp  os_input.cpp  os_input.h  prog1.cpp  prog1.h
src/prog/private/: editor.cpp  os_basic.cpp  os_basic_cat.cpp  os_basic_count.cpp  os_basic_crypto.cpp  os_basic_dogs.cpp  os_basic_driver.cpp  os_basic_echo.cpp  os_basic_edit.cpp  os_basic_exec.cpp  os_basic_file.cpp  os_basic_groupadd.cpp  os_basic_host.cpp  os_basic_ifconfig.cpp  os_basic_kill.cpp  os_basic_load.cpp  os_basic_login.cpp  os_basic_ls.cpp  os_basic_mkdir.cpp  os_basic_netarp.cpp  os_basic_netmap.cpp  os_basic_netrx.cpp  os_basic_nettx.cpp  os_basic_ping.cpp  os_basic_proc.cpp  os_basic_rm.cpp  os_basic_save.cpp  os_basic_shell.cpp  os_basic_snake.cpp  os_basic_srv_net.cpp  os_basic_ssh.cpp  os_basic_ssh_client.cpp  os_basic_ssh_server.cpp  os_basic_sudo.cpp  os_basic_touch.cpp  os_basic_user.cpp  os_basic_useradd.cpp  os_basic_wait.cpp  os_fileio.cpp  os_fsacc.cpp  (+2 more)
src/prog/public/: editor.h  host_utils.h  os_basic.h  os_fileio.h  os_fsacc.cpp  os_fsacc.h
src/programs/: CMakeLists.txt
src/programs/private/: editor.cpp  os_basic.cpp  os_basic_dogs.cpp  os_basic_driver.cpp  os_basic_file.cpp  os_basic_groupadd.cpp  os_basic_host.cpp  os_basic_kill.cpp  os_basic_nettx.cpp  os_basic_ssh_server.cpp  os_basic_sudo.cpp  os_basic_user.cpp
src/programs/public/: editor.h  host_utils.h  os_basic.h
src/services/: CMakeLists.txt
src/services/private/: services.cpp  timer_awaiter.cpp
src/services/public/: game_srv.h  services.h  timer_awaiter.h  timer_base.h
src/social/: CMakeLists.txt
src/social/private/: social.cpp
src/social/public/: corp.h  person.h  social.h
src/tech/: CMakeLists.txt
src/tech/private/: cpu.cpp  device.cpp  disk.cpp  filepath.cpp  host.cpp  link_awaiter.cpp  net_mgr.cpp  nic.cpp  os.cpp  proc_fsapi.cpp  proc_netapi.cpp  proc_signal_awaiter.cpp  session_mgr.cpp
src/tech/public/: cpu.h  device_state.h  file.h  filepath.h  filesystem.h  filesystem_types.h  host.h  nic.h  os.h  proc.h  proc_fsapi.h  proc_signal_awaiter.h  proc_sysapi.h  proc_types.h  scoped_fd.h  users_mgr.h
src/utils/: CMakeLists.txt
src/utils/code/: msg_queue.h  sha256.cpp  term_utils.cpp  term_utils.h  utils.cpp
src/utils/private/: sha256.cpp  timer_mgr.cpp  utils.cpp
src/utils/public/: addr.h  link_srv.h  msg_queue.h  race_awaiter.h  rel_mgr.h  sha256.h  task.h  term_utils.h  timer_mgr.h
src/world/: CMakeLists.txt
src/world/code/: addr.h  cmd.cpp  cmd.h  cpu.h  device.cpp  device.h  device_state.cpp  disk.h  endpoint.h  file.cpp  file.h  filesystem.cpp  filesystem.h  host.cpp  host.h  host_utils.h  ip_mgr.cpp  ip_mgr.h  msg_queue.h  navigator.cpp  navigator.h  netw.cpp  netw.h  nic.h  os.cpp  os.h  proc.cpp  proc.h  process.h  soa_helpers.h  task.h  timer_mgr.cpp  timer_mgr.h  world.cpp  world.h
src/world/private/: addr.cpp  device.cpp  disk.cpp  file.cpp  file_socket.cpp  filesystem.cpp  host.cpp  navigator.cpp  net_mgr.cpp  net_srv.cpp  net_types.cpp  netw.cpp  nic.cpp  os.cpp  proc.cpp  proc_fsapi.cpp  proc_ioapi.cpp  proc_netapi.cpp  proc_sysapi.cpp  scoped_fd.cpp  session_mgr.cpp  timer_mgr.cpp  users_mgr.cpp  world.cpp
src/world/public/: addr.h  cpu.h  device.h  disk.h  endpoint.h  file.h  file_binary.h  file_socket.h  file_text.h  filesystem.h  filesystem_types.h  host.h  host_utils.h  link_awaiter.h  link_srv.h  navigator.h  net_mgr.h  net_srv.h  net_types.h  netw.h  nic.h  os.h  proc.h  proc_fsapi.h  proc_io.h  proc_ioapi.h  proc_netapi.h  proc_sysapi.h  proc_types.h  session.h  session_mgr.h  str_sock.h  timer_mgr.h  uid.h  uid64.h  users_mgr.h  uuid.h  world.h  world_gen.cpp  world_gen.h
