CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0)
PROJECT(DeadBeefCafe VERSION 0.1.0 LANGUAGES C CXX)
SET(CMAKE_CXX_STANDARD 23)

ADD_COMPILE_DEFINITIONS(_WIN32_WINNT=0x0601)

#INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(src)